--- a/public/main/template/default/admin/resource_sequence.html.twig
+++ b/public/main/template/default/admin/resource_sequence.html.twig
@@ -259,7 +259,7 @@
         </script>
         <div class="panel panel-default">
             <div class="panel-body">
-                <div class="section-title-sequence">{{ 'SequenceSelection' | get_lang }}</div>
+                <div class="section-title-sequence">{{ 'Sequence selection' | get_lang }}</div>
                 <div class="row">
                     <div class="col-md-6">
                         {{ create_sequence }}
@@ -273,7 +273,7 @@
 
         <div class="panel panel-default">
             <div class="panel-body">
-                <div class="section-title-sequence">{{ 'SequenceConfiguration' | get_lang }}</div>
+                <div class="section-title-sequence">{{ 'Sequence configuration' | get_lang }}</div>
                 <div class="row">
 
                     {{ configure_sequence }}
@@ -283,11 +283,11 @@
         </div>
         <div class="panel panel-default">
             <div class="panel-body">
-                <div class="section-title-sequence">{{ 'SequencePreview' | get_lang }}</div>
+                <div class="section-title-sequence">{{ 'Sequence preview' | get_lang }}</div>
                 <div class="row">
                     <div class="col-md-9">
                         <h4 class="title-sequence">
-                            {{ 'ItemsTheReferenceDependsOn' | get_lang }}
+                            {{ 'Items the reference depends on' | get_lang }}
                         </h4>
                         <div id="parents">
                         </div>
@@ -300,13 +300,13 @@
                         <div class="border-sequence">
                             <div class="arrow-sequence"></div>
                         </div>
-                        <h4 class="title-sequence">{{ 'Dependencies' | get_lang }}</h4>
+                        <h4 class="title-sequence">{{ 'Items that depend on the reference' | get_lang }}</h4>
                         <div id="children">
                         </div>
 
                     </div>
                     <div class="col-md-3">
-                        <h4 class="title-sequence">{{ 'GraphDependencyTree' | get_lang }}</h4>
+                        <h4 class="title-sequence">{{ 'Dependency tree' | get_lang }}</h4>
                         <div id="show_graph"></div>
                     </div>
 
