Security: Portfolio: Apply remove XSS on items and comments content - refs BT#22113

--- a/main/template/default/portfolio/view.html.twig
+++ b/main/template/default/portfolio/view.html.twig
@@ -47,7 +47,7 @@
         </ul>
     </header>
 
-    {{ item_content }}
+    {{ item_content|remove_xss }}
 
     {% if attachment_list %}
         <section>
