--- a/public/main/template/default/admin/resource_sequence.html.twig
+++ b/public/main/template/default/admin/resource_sequence.html.twig
@@ -158,7 +158,7 @@
             $('button[name="use_as_reference"]').on('click', function (e) {
               e.preventDefault();
               $('button[name="set_requirement"]').prop('disabled', false);
-              $('#requirements').prop('disabled', false).selectpicker('refresh');
+              $('#requirements').prop('disabled', false);
               $('button[name="save_resource"]').prop('disabled', false);
 
               useAsReference(type, sequenceId);
